# deer-rag

./: .gitignore  LICENSE  README.md  README.zh.md  README_zh.md  dev-stop.ps1  dev.ps1  pyproject.toml  start-deer-rag.cmd
app/: __init__.py
app/api/: app.py  dependencies.py  schemas.py
app/api/routers/: routes.py
app/context/: __init__.py  optimizer.py  packer.py
app/core/: __init__.py  config.py
app/core/interfaces/: __init__.py  base.py
app/evaluation/: __init__.py  artifacts.py  benchmark.py  chunk_compare.py  config.py  dataset.py  metrics.py  offline.py  runner.py
app/indexing/: __init__.py  dense.py  lexical.py  registry.py
app/ingestion/: __init__.py  dedup.py  service.py
app/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py  pipeline.py  query_rewrite.py  rerank.py  text.py
app/storage/: __init__.py  metadata.py
data/evaluation/: mini-eval-python-venv-zh.yaml  sample_dataset.yaml  semantic-eval-python-design-faq-zh.yaml  smoke-dataset.yaml
data/experiments/: baseline.yaml  smoke-experiment-manual.yaml  smoke-experiment.yaml
docs/: ARCHITECTURE.md  MVP_ROADMAP.md  PROJECT_BACKGROUND_TEMP.md  QUICKSTART.md  RESUME_VERSION.md  USER_MANUAL_zh.md
scripts/: dev-stop.ps1  dev.ps1  run_embedding_benchmark_suite.py  run_mini_eval_python_venv_zh.py  run_offline_eval.py  run_real_eval_suite.py
tests/: test_api_smoke.py  test_chunker.py  test_config.py  test_evaluation_benchmark.py  test_ingestion.py  test_metrics.py  test_optimizer.py  test_retrieval_enhancements.py
ui/: .env.example  package-lock.json  package.json
ui/src/lib/: api.ts  (+2 more)
(+20 files in other folders)
